# Mini-Document-Storage

./: .editorconfig  .gitignore  README.md  build.gradle
Documents/: API.txt  Introduction and History.key  Status.numbers
Source/C++/: CMDSAssociation.h  CMDSDocument+WorkItem.cpp  CMDSDocument+WorkItem.h  CMDSDocument.cpp  CMDSDocument.h  CMDSDocumentStorage.cpp  CMDSDocumentStorage.h  SMDSAssociation.h  SMDSValue.h  TMDSBatch.h  TMDSBatchInfo.h  TMDSCache.h  TMDSCollection.h  TMDSDocumentBackingCache.h  TMDSIndex.h
Source/C++/Ephemeral/: CMDSEphemeral.cpp  CMDSEphemeral.h
Source/C++/SQLite/: CMDSSQLite.cpp  CMDSSQLite.h  CMDSSQLiteDatabaseManager.cpp  CMDSSQLiteDatabaseManager.h  CMDSSQLiteDocumentBacking.cpp  CMDSSQLiteDocumentBacking.h
Source/C++/Server/: CMDSDocumentStorageServer.h
Source/Deprecated/: MDSRemoteStorage.swift  MDSRemoteStorageNetworkClient.swift
Source/JS/: README.md  package.json
Source/JS MySQL/: LICENSE  README.md  package.json
Source/JS MySQL/AWS API Starting Point/: association.js  cache.js  collection.js  document.js  index.js  info.js
Source/JS MySQL/Express API Starting Point/: association.js  cache.js  collection.js  document.js  index.js  info.js
Source/Python/: README.md  pyproject.toml
Source/Python/src/mini_document_storage/client/: MDSClient.py  MDSDocument.py
Source/Swift/: HTTPEndpointClient+MDSExtensions.swift  MDSAssociation.swift  MDSBatch.swift  MDSBatchInfo.swift  MDSCache.swift  MDSCollection.swift  MDSDocument.swift  MDSDocumentBackingCache.swift  MDSDocumentStorage+Async.swift  MDSDocumentStorage.swift  MDSDocumentStorageServerHandler.swift  MDSEphemeral.swift  MDSHTTPServices.swift  MDSIndex.swift  MDSRemoteStorage.swift  MDSRemoteStorageCache.swift  MDSSQLite.swift  MDSSQLiteCollection.swift  MDSSQLiteCore.swift  MDSSQLiteDocumentBacking.swift  MiniDocumentStorage.swift
Tests/: Mini Document Storage.paw
src/main/: AndroidManifest.xml
(+113 files in other folders)
